Add constraint for edit and create product variant

--- a/Backend/Areas/Admin/Views/ProductVariant/Create.cshtml
+++ b/Backend/Areas/Admin/Views/ProductVariant/Create.cshtml
@@ -1,4 +1,4 @@
-@model Backend.Models.ProductVariant
+@model Backend.ViewModels.CreateProductVariantViewModel
 @{
     ViewData["Title"] = "Add Product Variant";
     var productId = ViewBag.ProductId;
